--- a/src/app/issues-viewer/card-view/card-view.component.html
+++ b/src/app/issues-viewer/card-view/card-view.component.html
@@ -4,7 +4,7 @@
     [ngTemplateOutletContext]="{ $implicit: this.group }"
   ></ng-container>
   <div class="scrollable-container-wrapper scroll-shadow">
-    <div class="scrollable-container">
+    <div class="scrollable-container" #scrollableContainer>
       <div class="issue-pr-cards" *ngFor="let issue of this.issues$ | async; index as i">
         <app-issue-pr-card [issue]="issue" [filter]="issues.filter" [milestoneService]="milestoneService"></app-issue-pr-card>
       </div>
@@ -18,6 +18,7 @@
     [hidePageSize]="true"
     [pageSizeOptions]="[10, 20, 50]"
     [class]="pageSize >= issueLength ? 'pagination-hide-arrow' : ''"
+    (page)="onPageChange()"
   ></mat-paginator>
 </div>
 
