Modify cursor when hover

--- a/src/app/shared/issue-pr-card/issue-pr-card-header/issue-pr-card-header.component.css
+++ b/src/app/shared/issue-pr-card/issue-pr-card-header/issue-pr-card-header.component.css
@@ -12,6 +12,10 @@ span.octicon {
   word-break: break-word;
 }
 
+.mat-card-title:hover {
+  cursor: pointer;
+}
+
 .column-header .mat-card-title {
   font-size: 14px;
 }
